# minifier-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: CI.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cssparser.rs
src/: cli.rs  html.rs  js.rs  lib.rs  main.rs
src/css/: css.rs  mod.rs  tests.rs  token.rs
src/js/: js.rs  mod.rs  token.rs  tools.rs  utils.rs
src/json/: json_minifier.rs  mod.rs  string.rs
src/json/read/: byte_to_char.rs  internal_buffer.rs  internal_reader.rs  json_read.rs
tests/: js_minify.rs
tests/files/: minified_main.js  test.html
