[package]
name = "minifier"
version = "0.0.36"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "Minifier tool/lib for JS/CSS/JSON files"
repository = "https://github.com/GuillaumeGomez/minifier-rs"
documentation = "https://docs.rs/minifier-rs"
readme = "README.md"
keywords = ["minify", "minifier", "JS", "HTML", "CSS"]
license = "MIT"

[badges]
appveyor = { repository = "GuillaumeGomez/minifier-rs", service = "github" }
travis-ci = { repository = "GuillaumeGomez/minifier-rs" }

[features]
html = ["regex"]

[dependencies]
macro-utils = "^0.1"
regex = { version = "1.0", optional = true }

[lib]
name = "minifier"

[[bin]]
name = "minifier"
doc = false
