[package]
name = "minifier"
version = "0.3.4"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "Minifier tool/lib for JS/CSS/JSON files"
repository = "https://github.com/GuillaumeGomez/minifier-rs"
documentation = "https://docs.rs/minifier-rs"
readme = "README.md"
keywords = ["minify", "minifier", "JS", "HTML", "CSS"]
license = "MIT"
edition = "2021"

[features]
default = ["clap"]
html = ["regex"]

[dependencies]
clap = { version = "4.5.13", features = ["cargo"], optional = true }
regex = { version = "1.5.5", optional = true }

[lib]
name = "minifier"

[[bin]]
name = "minifier"
doc = false
required-features = ["clap"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
